update
Ahora sí que funciona 100% crear, editar y eliminar usuario tanto en el SWAGGER como en el POSTMAN
