# ProjectoAniku/src/routes/usuario.js
@@ -6,7 +6,7 @@ const router = express.Router();
 
 router.post('', crearUsuario);
 
-router.put('/:id', editarUsuario);
+router.put('/:telephone', editarUsuario);
 router.delete('/:id', eliminarUsuario);
 
 module.exports = router;
